--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1041,7 +1041,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -1070,5 +1070,36 @@
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "La configuraci\u00f3n para el despliegue autom\u00e1tico de Lecciones est\u00e1 activada. Los estudiantes ser\u00e1n redirigidos a la lecci\u00f3n seleccionada cuando entren al curso para que se muestre autom\u00e1ticamente.",
     "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "La funcionalidad de lanzamiento autom\u00e1tico de documentos est\u00e1 activada. Los estudiantes ser\u00e1n redirigidos autom\u00e1ticamente a la herramienta de documentos.",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "La funcionalidad de lanzamiento autom\u00e1tico de ejercicios est\u00e1 activada. Los estudiantes ser\u00e1n autom\u00e1ticamente redirigidos a la lista de ejercicios.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Prerrequisitos",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "Editar la lecci\u00f3n",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "Lecciones"
 }
