--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -965,7 +965,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -990,5 +990,36 @@
     "Course progress": "Progresso no curso",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "A op\u00e7\u00e3o de in\u00edcio autom\u00e1tico do exerc\u00edcio est\u00e1 ativa. Os alunos ser\u00e3o automaticamente redirecionados para o exerc\u00edcio selecionado",
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Configura o auto-iniciar do Percurso de Aprendizagem para ON . Quando os estudantes acederem um curso, eles ser\u00e3o automaticamente redireccionados para o Percurso de Aprendizagem marcada como inicializa\u00e7\u00e3o autom\u00e1tica.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Pr\u00e9-requisitos",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "Editar percurso/caminho de aprendizagem",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "Percurso de Aprendizagem"
 }
