--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -1030,7 +1030,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -1059,5 +1059,36 @@
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "\u0627\u0646 \u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u0639\u0644\u0645 \u0645\u0641\u0639\u0644\u0629\u0640 \u0648\u0628\u0627\u0644\u062a\u0627\u0644\u064a \u0641\u0627\u0646 \u0639\u0646\u062f \u062f\u062e\u0648\u0644 \u0627\u0644\u0637\u0644\u0628\u0629 \u0644\u0644\u0645\u0642\u0631\u0631 \u0641\u0633\u0648\u0641 \u064a\u062a\u0645 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u062a\u0644\u0642\u0627\u0626\u064a\u0627 \u0627\u0644\u0649 \u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u0639\u0644\u0645 \u0630\u0648 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a",
     "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "\u062e\u0627\u0635\u064a\u0629 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0644\u0645\u0633\u062a\u0646\u062f\u0627\u062a \u0645\u0641\u0639\u0644\u0629\u060c \u0648\u0628\u0627\u0644\u062a\u0627\u0644\u064a \u0641\u0627\u0646 \u0627\u0644\u0637\u0644\u0628\u0629 \u0633\u0648\u0641 \u064a\u062a\u0645 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u062a\u0644\u0642\u0627\u0626\u064a\u0627 \u0627\u0644\u0649 \u0627\u062f\u0627\u0629 \u0627\u0644\u0645\u0633\u062a\u0646\u062f",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "\u0627\u0646 \u062e\u0627\u0635\u064a\u0629 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0644\u062a\u0645\u0627\u0631\u064a\u0646 \u0645\u0641\u0639\u0644\u0629\u060c \u0648\u0628\u0627\u0644\u062a\u0627\u0644\u064a \u0641\u0627\u0646 \u0627\u0644\u0637\u0644\u0628\u0629 \u0633\u0648\u0641 \u064a\u062a\u0645 \u0627\u0639\u0627\u062f\u0629 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u0645\u0628\u0627\u0634\u0631\u0629 \u0627\u0644\u0649 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u062a\u0645\u0627\u0631\u064a\u0646",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "\u0645\u062a\u0637\u0644\u0628\u0627\u062a \u0645\u0633\u0628\u0642\u0629",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "\u062a\u0639\u062f\u064a\u0644 \u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u0651\u0639\u0644\u0645",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "\u0627\u0644\u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u0639\u0644\u064a\u0645\u064a"
 }
