--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -986,7 +986,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -1013,5 +1013,36 @@
     "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "El par\u00e0metre d'arrencada autom\u00e0tica del f\u00f2rum est\u00e0 activat. Els estudiants seran redirigits directament a l'eina de f\u00f2rum quan entrin a aquest curs.",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "La configuraci\u00f3 per el desplegament autom\u00e0tic d'Exercicis est\u00e0 activada. Els estudiants seran redirigits a l'exercici seleccionat per que tal que es mostri autom\u00e0ticament.",
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "La configuraci\u00f3 per al desplegament autom\u00e0tic de lli\u00e7ons est\u00e0 activada. Quan els estudiants entrin al curs, seran redirigits a la lli\u00e7\u00f3 seleccionada perqu\u00e8 es desplegui autom\u00e0ticament.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Requisits previs",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "Editar l'itinerari formatiu",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "Lli\u00e7ons"
 }
