--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -949,7 +949,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -975,5 +975,36 @@
     "Course progress": "Ikastaroaren aurrerapena",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Ariketak automatikoki abiarazteko konfigurazioa aktibaturik dago. Ikasleak automatikoki bergidatuak izango dira aukeratutako ariketara.",
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Ikaskuntza ibilbideak automatikoki abiarazteko konfigurazioa aktibaturik dago. Ikastaro honetan sartzen direnean, ikasleak automatikoki bergidatuak izango dira markatutako ikaskuntza ibilbidera, horrela automatikoki abiaraziz.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Aurretiko betebeharrak",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "Editatu ikaskuntza ibilbidea",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "Ikaskuntza ibilbidea"
 }
