--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -888,7 +888,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -914,5 +914,36 @@
     "Course progress": "\u0631\u0648\u0646\u062f \u067e\u06cc\u0634\u0631\u0641\u062a \u062f\u0631\u0633",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "\u0642\u0627\u0628\u0644\u06cc\u062a \u0627\u062c\u0631\u0627\u06cc \u062e\u0648\u062f\u06a9\u0627\u0631 \u0627\u06cc\u0646 \u062a\u0645\u0631\u06cc\u0646 \u0641\u0639\u0627\u0644 \u0634\u062f\u0647 \u0627\u0633\u062a. \u062f\u0627\u0646\u0634\u062c\u0648\u06cc\u0627\u0646 \u0628\u0647 \u0635\u0648\u0631\u062a \u062e\u0648\u062f\u06a9\u0627\u0631 \u0628\u0647 \u062a\u0645\u0631\u06cc\u0646 \u0645\u0646\u062a\u062e\u0628 \u0647\u062f\u0627\u06cc\u062a \u062e\u0648\u0627\u0647\u0646\u062f \u0634\u062f.",
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u0631\u0627\u0647 \u0627\u0646\u062f\u0627\u0632\u06cc \u0627\u062a\u0648\u0645\u0627\u062a\u06cc\u06a9 \u0645\u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc \u0631\u0648\u0634\u0646 \u0647\u0633\u062a. \u0648\u0642\u062a\u06cc \u062f\u0627\u0646\u0634\u062c\u0648\u06cc\u0627\u0646 \u0648\u0627\u0631\u062f \u062f\u0631\u0633 \u0634\u0648\u0646\u062f\u060c \u0622\u0646\u0647\u0627 \u0628\u0635\u0648\u0631\u062a \u0627\u062a\u0648\u0645\u0627\u062a\u06cc\u06a9 \u0628\u0647 \u0645\u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc \u06a9\u0647 \u0628\u0634\u06a9\u0644 \u0631\u0627\u0647 \u0627\u0646\u062f\u0627\u0632\u06cc \u0627\u062a\u0648\u0645\u0627\u062a\u06cc\u06a9 \u062f\u0631 \u0622\u0645\u062f\u0647 \u0627\u0633\u062a \u0647\u062f\u0627\u06cc\u062a \u062e\u0648\u0627\u0647\u0646\u062f \u0634\u062f.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "\u067e\u06cc\u0634 \u0646\u06cc\u0627\u0632",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "\u062a\u063a\u06cc\u06cc\u0631 \u0646\u0627\u0645 \u0648 \u062a\u0648\u0636\u06cc\u062d\u0627\u062a \u0645\u0631\u0628\u0648\u0637 \u0628\u0647 \u062e\u0637 \u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "\u0645\u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc"
 }
