--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -1041,7 +1041,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "Pas de cours pr\u00e9f\u00e9r\u00e9.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "Cette liste affiche les utilisateurs de toutes les URL d'acc\u00e8s car le param\u00e8tre \u00ab session_admin_access_to_all_users_on_all_urls \u00bb est activ\u00e9.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -1070,5 +1070,36 @@
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Le param\u00e8tre d'auto-d\u00e9marrage des parcours d'apprentissage est activ\u00e9. Lorsque les apprenants entreront dans cet espace de cours, ils seront automatiquement redirig\u00e9s vers le parcours d'apprentissage s\u00e9lectionn\u00e9 pour l'auto-d\u00e9marrage.",
     "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "La fonctionnalit\u00e9 d'auto-d\u00e9marrage des documents est activ\u00e9e. Les apprenants seront automatiquement redirig\u00e9s vers l'outil documents.",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "La fonctionnalit\u00e9 d'auto-d\u00e9marrage des exercices est activ\u00e9e. Les apprenants seront automatiquement redirig\u00e9s vers la liste des exercices.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Pr\u00e9-requis",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "\u00c9diter le nom et/ou la description du parcours",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "Parcours"
 }
