--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -1022,7 +1022,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -1050,5 +1050,36 @@
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05e0\u05ea\u05d9\u05d1 \u05d4\u05dc\u05de\u05d9\u05d3\u05d4 \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05db\u05d0\u05e9\u05e8 \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05e7\u05d5\u05e8\u05e1 \u05d6\u05d4, \u05d4\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05e0\u05ea\u05d9\u05d1 \u05d4\u05dc\u05de\u05d9\u05d3\u05d4 \u05d4\u05de\u05e1\u05d5\u05de\u05df \u05db\u05d4\u05e4\u05e2\u05dc\u05d4 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea.",
     "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "\u05ea\u05e6\u05d5\u05e8\u05ea \u05ea\u05db\u05d5\u05e0\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d4\u05de\u05e1\u05de\u05da \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05db\u05dc\u05d9 \u05d4\u05de\u05e1\u05de\u05db\u05d9\u05dd.",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "\u05ea\u05e6\u05d5\u05e8\u05ea \u05ea\u05db\u05d5\u05e0\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d4\u05ea\u05e8\u05d2\u05d9\u05dc\u05d9\u05dd \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05ea\u05e8\u05d2\u05d9\u05dc\u05d9\u05dd.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "\u05d3\u05e8\u05d9\u05e9\u05d5\u05ea \u05de\u05d5\u05e7\u05d3\u05de\u05d5\u05ea",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "\u05e2\u05e8\u05d5\u05da \u05de\u05e1\u05dc\u05d5\u05dc \u05dc\u05d9\u05de\u05d5\u05d3\u05d9\u05dd",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "\u05de\u05e1\u05dc\u05d5\u05dc \u05dc\u05de\u05d9\u05d3\u05d4"
 }
