--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -780,7 +780,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -796,5 +796,35 @@
     "Tests": "\u0422\u0435\u0441\u0442\u043e\u0432\u0438",
     "Announcements": "\u0418\u0437\u0432\u0435\u0441\u0442\u0443\u0432\u0430\u045a\u0430",
     "Forum": "\u0424\u043e\u0440\u0443\u043c\u0438",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "\u041f\u0440\u0435\u0434\u0443\u0441\u043b\u043e\u0432\u0438",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "\u0443\u0440\u0435\u0434\u0438 \u043f\u0430\u0442\u0435\u043a\u0430_\u043d\u0430_\u0443\u0447\u0435\u045a\u0435\u0442\u043e",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party"
 }
