--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -946,7 +946,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -972,5 +972,36 @@
     "Course progress": "Post\u0119p kursu",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Funkcja automatycznego uruchamiania \u0107wicze\u0144 jest w\u0142\u0105czona. Studenci b\u0119d\u0105 automatycznie kierowani do wybranego \u0107wiczenia.",
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Funkcja automatycznego uruchamiania \u015bcie\u017cki nauczania jest w\u0142\u0105czona. Po rozpocz\u0119ciu kursu, studenci b\u0119d\u0105 automatycznie kierowani do \u015bcie\u017cki nauczania oznaczonej jako auto-start.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Wymagania",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "Edytuj \u015bcie\u017ck\u0119 nauki",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "\u015acie\u017cka Nauczania"
 }
