--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -985,7 +985,7 @@
     "Loading layout": "Loading layout",
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
-    "No favorite courses": "No favorite courses",
+    "No favorite courses.": "No favorite courses.",
     "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
@@ -1011,5 +1011,36 @@
     "Course progress": "Pokrok v kurze",
     "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Funkcia konfigur\u00e1cie automatick\u00e9ho spustenia Cvi\u010denie je povolen\u00e1. \u0160tudenti bud\u00fa automaticky presmerovan\u00ed na vybran\u00e9 cvi\u010denia.",
     "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Nastavenie automatick\u00e9ho spustenia u\u010debnej osnovy je ZAPNUT\u00c9. Ke\u010f \u017eiaci vst\u00fapia do tohto kurzu, bud\u00fa automaticky presmerovan\u00ed na u\u010debn\u00fa osnovu ozna\u010den\u00fa ako auto-\u0161tart.",
-    "Contact support": "Contact support"
+    "Contact support": "Contact support",
+    "ex. localhost": "ex. localhost",
+    "ex. 3306": "ex. 3306",
+    "ex. root": "ex. root",
+    "Theme selected as current": "Theme selected as current",
+    "Color theme created": "Color theme created",
+    "You are editing logos for visual theme": "You are editing logos for visual theme",
+    "Header logo": "Header logo",
+    "Effective preview": "Effective preview",
+    "Using default theme logo": "Using default theme logo",
+    "Files in current theme": "Files in current theme",
+    "No SVG uploaded": "No SVG uploaded",
+    "Remove SVG": "Remove SVG",
+    "No PNG uploaded": "No PNG uploaded",
+    "Remove PNG": "Remove PNG",
+    "Save header logo": "Save header logo",
+    "Email logo": "Email logo",
+    "Save email logo": "Save email logo",
+    "PNG format required": "PNG format required",
+    "SVG format required": "SVG format required",
+    "Select at least one file": "Select at least one file",
+    "Upload failed": "Upload failed",
+    "Deletion failed": "Deletion failed",
+    "Drag to reorder": "Drag to reorder",
+    "Clean temporary files": "Clean temporary files",
+    "Prerequisites": "Vstupn\u00e9 podmienky",
+    "Publish / Hide": "Publish / Hide",
+    "Edit learnpath": "Upravi\u0165 osnovu",
+    "Select which items to include in the PDF": "Select which items to include in the PDF",
+    "Open in a new tab": "Open in a new tab",
+    "Delete third party": "Delete third party",
+    "Learning path": "U\u010debn\u00e1 osnova"
 }
