--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1110,6 +1110,11 @@
     "Untitled": "Untitled",
     "Security tools and reports": "Security tools and reports",
     "This field cannot be empty": "This field cannot be empty",
-    "This is not a valid URL. Example: https://example.com": "This is not a valid URL. Example: https://example.com",
-    "Are you sure you want to delete this?": "Are you sure you want to delete this?"
+    "This is not a valid URL. Example: https:\/\/example.com": "This is not a valid URL. Example: https:\/\/example.com",
+    "Are you sure you want to delete this?": "Are you sure you want to delete this?",
+    "Add tags": "Add tags",
+    "Color theme": "Color theme",
+    "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
+    "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
+    "Create new learning path": "Create new learning path"
 }
