--- a/assets/locales/gl.json
+++ b/assets/locales/gl.json
@@ -1101,5 +1101,19 @@
     "Select which items to include in the PDF": "Select which items to include in the PDF",
     "Open in a new tab": "Open in a new tab",
     "Delete third party": "Delete third party",
-    "Learning path": "Learning path"
+    "Learning path": "Learning path",
+    "Category options": "Category options",
+    "Expand": "Expand",
+    "Collapse": "Collapse",
+    "Copy link": "Copy link",
+    "Untitled": "Untitled",
+    "Security tools and reports": "Security tools and reports",
+    "This field cannot be empty": "This field cannot be empty",
+    "This is not a valid URL. Example: https://example.com": "This is not a valid URL. Example: https://example.com",
+    "Are you sure you want to delete this?": "Are you sure you want to delete this?",
+    "Add tags": "Add tags",
+    "Color theme": "Color theme",
+    "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
+    "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
+    "Create new learning path": "Create new learning path"
 }
