--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -954,6 +954,7 @@
     "Please click on the link below corresponding to the URL you wish to access": "Please click on the link below corresponding to the URL you wish to access",
     "You do not currently have access to any URL": "You do not currently have access to any URL",
     "Maximum number of subscriptions allowed": "Maximum number of subscriptions allowed",
+    "An error occurred": "An error occurred",
     "You don\\'t have any course content yet": "You don\\'t have any course content yet",
     "This course is locked": "This course is locked",
     "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as \\'reply-to\\' header": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as \\'reply-to\\' header",
@@ -1080,5 +1081,18 @@
     "Select which items to include in the PDF": "Select which items to include in the PDF",
     "Open in a new tab": "Open in a new tab",
     "Delete third party": "Delete third party",
-    "Learning path": "\u05de\u05e1\u05dc\u05d5\u05dc \u05dc\u05de\u05d9\u05d3\u05d4"
+    "Learning path": "\u05de\u05e1\u05dc\u05d5\u05dc \u05dc\u05de\u05d9\u05d3\u05d4",
+    "Category options": "Category options",
+    "Expand": "\u05d4\u05e8\u05d7\u05d1",
+    "Collapse": "\u05db\u05d5\u05d5\u05e5",
+    "Copy link": "Copy link",
+    "Untitled": "\u05dc\u05dc\u05d0 \u05db\u05d5\u05ea\u05e8\u05ea",
+    "Security tools and reports": "Security tools and reports",
+    "This field cannot be empty": "This field cannot be empty",
+    "This is not a valid URL. Example: https://example.com": "This is not a valid URL. Example: https://example.com",
+    "Are you sure you want to delete this?": "Are you sure you want to delete this?",
+    "Color theme": "Color theme",
+    "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
+    "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
+    "Create new learning path": "\u05e6\u05d5\u05e8 \u05e0\u05ea\u05d9\u05d1 \u05dc\u05de\u05d9\u05d3\u05d4 \u05d7\u05d3\u05e9"
 }
