--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -726,6 +726,7 @@
     "Please click on the link below corresponding to the URL you wish to access": "Please click on the link below corresponding to the URL you wish to access",
     "You do not currently have access to any URL": "You do not currently have access to any URL",
     "Maximum number of subscriptions allowed": "Maximum number of subscriptions allowed",
+    "An error occurred": "An error occurred",
     "You don\\'t have any course content yet": "You don\\'t have any course content yet",
     "This course is locked": "This course is locked",
     "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as \\'reply-to\\' header": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as \\'reply-to\\' header",
@@ -841,5 +842,15 @@
     "Select which items to include in the PDF": "Select which items to include in the PDF",
     "Open in a new tab": "Open in a new tab",
     "Delete third party": "Delete third party",
-    "Learning path": "\u041a\u0443\u0440\u0441 \u043e\u0431\u0443\u0447\u0435\u043d\u0438\u044f"
+    "Learning path": "\u041a\u0443\u0440\u0441 \u043e\u0431\u0443\u0447\u0435\u043d\u0438\u044f",
+    "Category options": "Category options",
+    "Copy link": "Copy link",
+    "Security tools and reports": "Security tools and reports",
+    "This field cannot be empty": "This field cannot be empty",
+    "This is not a valid URL. Example: https://example.com": "This is not a valid URL. Example: https://example.com",
+    "Are you sure you want to delete this?": "Are you sure you want to delete this?",
+    "Color theme": "Color theme",
+    "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
+    "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
+    "Create new learning path": "\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0443\u0447\u0435\u0431\u043d\u044b\u0439 \u043f\u043b\u0430\u043d"
 }
