--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -30605,3 +30605,36 @@ msgstr ""
 
 msgid "Are you sure you want to delete this?"
 msgstr ""
+
+msgid "Color theme"
+msgstr ""
+
+msgid "Logos will be applied to the current visual theme: "
+msgstr ""
+
+msgid "Switch the active theme if you want to upload logos for a different one."
+msgstr ""
+
+msgid "Uploaded"
+msgstr ""
+
+msgid "Back to plugins"
+msgstr ""
+
+msgid "Installing"
+msgstr ""
+
+msgid "Processing"
+msgstr ""
+
+msgid "Uninstalling"
+msgstr ""
+
+msgid "Enabling"
+msgstr ""
+
+msgid "Disabling"
+msgstr ""
+
+msgid "Allow PDF exports for this item"
+msgstr ""
