--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -871,5 +871,9 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "L\u00e4gg till ny inl\u00e4rningsv\u00e4g"
+    "Create new learning path": "L\u00e4gg till ny inl\u00e4rningsv\u00e4g",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
 }
