--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -950,5 +950,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "\u0421\u044a\u0437\u0434\u0430\u0432\u0430\u043d\u0435 \u043d\u0430 \u043f\u044a\u0442\u0435\u043a\u0430 \u0437\u0430 \u043e\u0431\u0443\u0447\u0435\u043d\u0438\u0435"
+    "Create new learning path": "\u0421\u044a\u0437\u0434\u0430\u0432\u0430\u043d\u0435 \u043d\u0430 \u043f\u044a\u0442\u0435\u043a\u0430 \u0437\u0430 \u043e\u0431\u0443\u0447\u0435\u043d\u0438\u0435",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "\u0414\u0430\u0442\u0430 \u043d\u0430 \u043f\u0440\u043e\u043c\u044f\u043d\u0430"
 }
