--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -757,5 +757,9 @@
     "Are you sure you want to delete this?": "Are you sure you want to delete this?",
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
-    "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one."
+    "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
 }
