--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -1019,5 +1019,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "Sortu ikaskuntza ibilbide berri bat"
+    "Create new learning path": "Sortu ikaskuntza ibilbide berri bat",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "Azken aldaketa"
 }
