--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -898,5 +898,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "Lis\u00e4\u00e4 oppimispolku"
+    "Create new learning path": "Lis\u00e4\u00e4 oppimispolku",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "Muokkaus p\u00e4iv\u00e4"
 }
