--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -891,5 +891,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "\u00daj tan\u00f6sv\u00e9ny hozz\u00e1ad\u00e1sa"
+    "Create new learning path": "\u00daj tan\u00f6sv\u00e9ny hozz\u00e1ad\u00e1sa",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "M\u00f3dos\u00edtva"
 }
