--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -788,5 +788,9 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "\u65b0\u3057\u3044\u5b66\u7fd2\u30d1\u30b9\u3092\u4f5c\u6210"
+    "Create new learning path": "\u65b0\u3057\u3044\u5b66\u7fd2\u30d1\u30b9\u3092\u4f5c\u6210",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
 }
