--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -999,5 +999,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "Veidot jaunu T\u0113mu un t\u0101s saturu. (T\u0113mu skaits  - neierobe\u017eots!)"
+    "Create new learning path": "Veidot jaunu T\u0113mu un t\u0101s saturu. (T\u0113mu skaits  - neierobe\u017eots!)",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "P\u0113d\u0113j\u0101s izmai\u0146as"
 }
