--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -836,5 +836,9 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "\u0414\u043e\u0434\u0430\u0458 \u041f\u0430\u0442\u0435\u043a\u0430 \u043d\u0430 \u0443\u0447\u0435\u045a\u0435\u0442\u043e"
+    "Create new learning path": "\u0414\u043e\u0434\u0430\u0458 \u041f\u0430\u0442\u0435\u043a\u0430 \u043d\u0430 \u0443\u0447\u0435\u045a\u0435\u0442\u043e",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
 }
