--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -1016,5 +1016,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "Dodaj now\u0105 \u015bcie\u017ck\u0119 nauki"
+    "Create new learning path": "Dodaj now\u0105 \u015bcie\u017ck\u0119 nauki",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "Zaktualizowana"
 }
