--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -1055,5 +1055,10 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "Prida\u0165 nov\u00fa osnovu"
+    "Create new learning path": "Prida\u0165 nov\u00fa osnovu",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Updated": "D\u00e1tum aktualiz\u00e1cie"
 }
