--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -837,5 +837,9 @@
     "Color theme": "Color theme",
     "Logos will be applied to the current visual theme: ": "Logos will be applied to the current visual theme: ",
     "Switch the active theme if you want to upload logos for a different one.": "Switch the active theme if you want to upload logos for a different one.",
-    "Create new learning path": "\u6dfb\u52a0\u5b78\u7fd2\u8def\u5f91"
+    "Create new learning path": "\u6dfb\u52a0\u5b78\u7fd2\u8def\u5f91",
+    "Go to branding (logos)": "Go to branding (logos)",
+    "Visual theme (assets)": "Visual theme (assets)",
+    "Branding (logos)": "Branding (logos)",
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
 }
